--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
+  intl_phone_number_input: ^0.7.4
+  intl_phone_field: ^3.2.0
+  otp_text_field: ^1.1.3
+  google_maps_flutter: ^2.6.1
+  loader_overlay: ^4.0.1
+  flutter_map: ^7.0.2
 
 dev_dependencies:
   flutter_test:
