--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps_flutter: ^2.6.1
   loader_overlay: ^4.0.1
   flutter_map: ^7.0.2
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
