--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   intl_phone_field: ^3.2.0
   otp_text_field: ^1.1.3
   google_maps_flutter: ^2.6.1
-  loader_overlay: ^4.0.1
   flutter_map: ^7.0.2
   flutter_riverpod: ^2.5.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
